--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,22 +13,16 @@
   "categories": ["education", "lifestyle"],
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/logo.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon-512.png", 
+      "src": "/logo.png", 
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
-    },
-    {
-      "src": "/icon.svg",
-      "sizes": "any",
-      "type": "image/svg+xml",
-      "purpose": "any"
     }
   ],
   "screenshots": [
@@ -53,7 +47,7 @@
       "url": "/#courses",
       "icons": [
         {
-          "src": "/icon-192.png",
+          "src": "/logo.png",
           "sizes": "192x192"
         }
       ]
@@ -65,7 +59,7 @@
       "url": "/#contact",
       "icons": [
         {
-          "src": "/icon-192.png",
+          "src": "/logo.png",
           "sizes": "192x192"
         }
       ]
