--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev --turbo",
+    "dev:memory": "node --max-old-space-size=4096 node_modules/next/dist/bin/next dev --turbo",
     "lint": "next lint",
     "start": "next start",
     "type-check": "tsc --noEmit",
