--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "geist": "^1.5.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.545.0",
-    "next": "16.0.0-beta.1",
+    "next": "16.0.0-beta.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-day-picker": "^9.11.1",
@@ -91,7 +91,7 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "eslint": "^9.37.0",
-    "eslint-config-next": "^15.5.5",
+    "eslint-config-next": "16.0.0-beta.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.14",
