--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -71,25 +72,27 @@
     "lucide-react": "^0.545.0",
     "next": "16.0.0-beta.0",
     "next-themes": "^0.4.6",
+    "pdfjs-dist": "5.4.296",
     "react": "^19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.65.0",
+    "react-pdf": "^10.2.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^3.2.1",
     "sonner": "^2.0.7",
+    "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^4.1.12",
-    "swr": "^2.3.6",
-    "axios": "^1.12.2"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^24.7.2",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "@types/react-pdf": "^7.0.0",
     "eslint": "^9.37.0",
     "eslint-config-next": "16.0.0-beta.0",
     "postcss": "^8.5.6",
