--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
     "@types/react-pdf": "^7.0.0",
+    "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9.39.1",
     "eslint-config-next": "16.0.3",
     "postcss": "^8.5.6",
