SEO, sitemap, metadata, and student data updates
SEO & metadata
- Root layout: use env-based search console verification (Google, Yandex, Yahoo)
  instead of hardcoded placeholders; inject WebSite JSON-LD via generateWebSiteSchema()
- lib/seo-utils: extend WebSite schema with inLanguage "el-GR", description,
  and correct SearchAction urlTemplate (/blog?search= instead of /search?q=);
  add generateSpeakableSchema() for voice search (SpeakableSpecification)
- Pages now use generateSEOMetadata() with path, keywords, and consistent
  "| ΚΥΚΛΟΣ Φροντιστήριο Άρτα" titles:
  - app/epityxontes/page.tsx
  - app/oi-kalyteroi-olon-ton-epoxon/page.tsx
  - app/privacy/page.tsx
  - app/prospectus/page.tsx
  - app/terms/page.tsx

Sitemap
- Fix epitychontes → epityxontes URL
- Add entries: epikairotita, nea-ekdiloseis, oi-kalyteroi-olon-ton-epoxon,
  themata-panellinion, blog, news (and /announcements, /events, /seminars),
  teachers, prospectus, privacy, terms with appropriate changeFrequency/priority

Blog
- Add app/blog/layout.tsx with SEO metadata for /blog (title, description, path, keywords)

Environment
- env.local.example: document NEXT_PUBLIC_API_URL and optional
  NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION, NEXT_PUBLIC_YANDEX_VERIFICATION,
  NEXT_PUBLIC_YAHOO_VERIFICATION for search console

Data
- components/epityxontes/students-data.ts: large expansion of student records
  (many cohorts/years) for the epityxontes (successful graduates) section

Scripts / misc
- parse-students.js, parsed-students.txt: student parsing/export artifacts
- FUCKING EXTRA DUDE.txt: untracked note file (consider adding to .gitignore if temporary)

--- a/env.local.example
+++ b/env.local.example
@@ -3,3 +3,8 @@ NEXT_PUBLIC_API_URL=https://kyklos-backend.onrender.com
 
 # For local development, use:
 # NEXT_PUBLIC_API_URL=http://localhost:5000
+
+# SEO: Search console verification (optional; get codes from Google/Bing/Yahoo)
+# NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION=your-google-verification-code
+# NEXT_PUBLIC_YANDEX_VERIFICATION=your-yandex-verification-code
+# NEXT_PUBLIC_YAHOO_VERIFICATION=your-yahoo-verification-code
